<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_games"
        android:title="@string/nav_games" />

    <item
        android:id="@+id/nav_matchups"
        android:title="@string/nav_matchups" />

    <item
        android:id="@+id/nav_leaderboard"
        android:title="@string/nav_leaderboard" />

</menu>