...
        android:textColorHint="@color/retro_text_secondary"
        android:backgroundTint="@color/retro_blue"
        android:inputType="text"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/spinner_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/retro_blue"
        android:popupBackground="@color/retro_card"/>

...
