...
            android:textSize="8sp"
            android:textColor="@color/retro_blue"
            android:fontFamily="@font/pressstart2p"
            android:paddingBottom="16dp" />

        <LinearLayout
            android:id="@+id/card_game_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/card_border"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
...
